csplit(1): Fix extraneous output in edge case

When the input to csplit contains fewer lines than the number of matches
specified, extra output was mistakenly included in some output files.

Fix the bug and add a simple ATF regression test.

PR:		219024
Submitted by:	J.R. Oldroyd <fbsd at opal.com>

Former-commit-id: ddc19d46b5293a59e3a4317651fb0a9bbfb02af7